--- a/WebPC/TrangChu/style.css
+++ b/WebPC/TrangChu/style.css
@@ -149,3 +149,44 @@ body {
 li + li {
     margin-top: 10px;
 }
+
+#sanPham:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#chungNhan:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#huongDanSuDung:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#baoHanh:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#first:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#last:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#congTrinhTieuBieu:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#chatbox {
+    position: fixed;
+    right: 5%;
+    bottom: 5%;
+}
