--- a/WebPC/ChungNhan/ChungNhanStyle.css
+++ b/WebPC/ChungNhan/ChungNhanStyle.css
@@ -22,7 +22,7 @@ body {
     justify-content: center;
 }
 
-#button > span {
+#button > span, a {
     font-size: 18px;
     color: white;
     font-family: Inter;
@@ -30,6 +30,11 @@ body {
     padding-left: 40px;
     border-right: white solid 1px;
     border-left: white solid 1px;
+}
+
+#button > a:hover {
+    color: white;
+    text-decoration: underline;
 }
 
 #button > #first {
@@ -61,56 +66,6 @@ body {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-}
-
-#firstBox {
-    background: linear-gradient(to right, #EB00FF 0%, #FFBFED 100%);
-}
-
-#secondBox {
-    background: linear-gradient(to right, #00FFD1 0%, #00C2FF 100%);
-}
-
-#thirdBox {
-    background: linear-gradient(to right, #FF820E 0%, #DBFF00 100%);
-}
-
-#firstImage {
-    width: 400px;
-    object-fit: contain;
-}
-
-#thirdImage {
-    width: 300px;
-    object-fit: contain;
-}
-
-.boxTitle {
-    font-size: 40px;
-    font-weight: bolder;
-    font-family: Inter;
-    margin-bottom: 40px;
-}
-
-.boxDescription {
-    font-size: 25px;
-    font-family: Inter;
-}
-
-#firstCer {
-    width: 225px;
-    object-fit: contain;
-}
-
-#secondCer {
-    width: 225px;
-    object-fit: contain;
-}
-
-#secondBoxImage {
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
 }
 
 #logo {
@@ -146,48 +101,57 @@ body {
     margin-left: 30px;
 }
 
-li + li {
-    margin-top: 10px;
+.container {
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 2fr 5fr;
+    grid-template-areas: 
+        'sidebar main';
+    margin: 30px 0px 0px 0px;
+    padding: 0px;
 }
 
-#sanPham:hover {
-    text-decoration: underline;
-    cursor: pointer;
+.bar {
+    background-image: linear-gradient(to right, #f9c0c0, #ffeb81);
+    border-radius: 1em;
+    margin: 0px 50px 50px 0px;
+    padding: 10px 0px 5px 0px;
 }
 
-#chungNhan:hover {
-    text-decoration: underline;
-    cursor: pointer;
+h6 {
+    display: flex;
+    align-items: center;
+    vertical-align: middle;
+    flex-direction: column;
 }
 
-#huongDanSuDung:hover {
-    text-decoration: underline;
-    cursor: pointer;
+.info {
+    padding: 0px 0px 0px 30px;
 }
 
-#baoHanh:hover {
-    text-decoration: underline;
-    cursor: pointer;
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+th, td {
+    text-align: center;
+    color: red;
+    padding: 8px;
+    width: 320px;
+    height: 320px;
+}
+th {
+    background-color: #dddddd;
 }
 
-#first:hover {
-    text-decoration: underline;
-    cursor: pointer;
+.certi {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    display: block;
+    margin: auto;
 }
 
-#last:hover {
-    text-decoration: underline;
-    cursor: pointer;
+.carousel-control-prev, .carousel-control-next {
+    border: 0px;
 }
-
-#congTrinhTieuBieu:hover {
-    text-decoration: underline;
-    cursor: pointer;
-}
-
-#chatbox {
-    position: fixed;
-    right: 5%;
-    bottom: 5%;
-}
-
