--- a/WebPC/CongTrinhTieuBieu/CongTrinhTieuBieuStyle.css
+++ b/WebPC/CongTrinhTieuBieu/CongTrinhTieuBieuStyle.css
@@ -174,3 +174,44 @@ li + li {
     background-color: #B192EF;
     color:#fff;
 }
+
+#button {
+    width: 100%;
+    height: 55px;
+    background-color: #D70000;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+#button > #first {
+    font-size: 18px;
+    color: #00C2FF;
+    font-family: Inter;
+    font-weight: bold;
+    padding-right: 40px;
+    padding-left: 40px;
+    border-right: white solid 1px;
+    border-left: white solid 2px;
+}
+
+#button > #last {
+    font-size: 18px;
+    color: white;
+    font-family: Inter;
+    padding-right: 40px;
+    padding-left: 40px;
+    border-right: white solid 2px;
+    border-left: white solid 1px;
+}
+
+#button > span, a {
+    font-size: 18px;
+    color: white;
+    font-family: Inter;
+    padding-right: 40px;
+    padding-left: 40px;
+    border-right: white solid 1px;
+    border-left: white solid 1px;
+}
