--- a/WebPC/ChungNhan/ChungNhanStyle.css
+++ b/WebPC/ChungNhan/ChungNhanStyle.css
@@ -155,3 +155,44 @@ th {
 .carousel-control-prev, .carousel-control-next {
     border: 0px;
 }
+
+#sanPham:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#trangChu:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#huongDanSuDung:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#baoHanh:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#first:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#last:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#congTrinhTieuBieu:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#chatbox {
+    position: fixed;
+    right: 5%;
+    bottom: 5%;
+}
