--- a/WebPC/SanPham/SanPhamStyles.css
+++ b/WebPC/SanPham/SanPhamStyles.css
@@ -187,9 +187,7 @@ li + li {
     flex:0 0 66.666667%;
     max-width:66.666667%
 }
-/* .pd-left{
-    margin-left: 5rem;
-} */
+
 .description {  
     display: flex;
     flex-direction: column;
@@ -270,10 +268,11 @@ li + li {
     color: white; /* Màu chữ trắng */
     border: none;
     padding: 10px 20px;
+    padding-bottom: 20px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 30px;
     margin: 4px 2px;
     cursor: pointer;
     border-radius: 5px;
