--- a/WebPC/CongTrinhTieuBieu/CongTrinhTieuBieuStyle.css
+++ b/WebPC/CongTrinhTieuBieu/CongTrinhTieuBieuStyle.css
@@ -82,6 +82,7 @@ body {
     font-weight: bold;
     font-family: Inter;
     font-size: 20px;
+    font-size: 1.3vw;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -191,6 +192,7 @@ li + li {
 
 #button > #first {
     font-size: 18px;
+    font-size: 1.1vw;
     color: #00C2FF;
     font-family: Inter;
     font-weight: bold;
@@ -202,6 +204,7 @@ li + li {
 
 #button > #last {
     font-size: 18px;
+    font-size: 1.1vw;
     color: white;
     font-family: Inter;
     padding-right: 40px;
@@ -212,6 +215,7 @@ li + li {
 
 #button > span, a {
     font-size: 18px;
+    font-size: 1.1vw;
     color: white;
     font-family: Inter;
     padding-right: 40px;
