--- a/WebPC/LienHe/LienHeStyle.css
+++ b/WebPC/LienHe/LienHeStyle.css
@@ -24,6 +24,7 @@ body {
 
 #button > span {
     font-size: 18px;
+    font-size: 1.1vw;
     color: white;
     font-family: Inter;
     padding-right: 40px;
@@ -34,6 +35,7 @@ body {
 
 #button > #first {
     font-size: 18px;
+    font-size: 1.1vw;
     color: #00C2FF;
     font-family: Inter;
     font-weight: bold;
@@ -45,6 +47,7 @@ body {
 
 #button > #last {
     font-size: 18px;
+    font-size: 1.1vw;
     color: white;
     font-family: Inter;
     padding-right: 40px;
@@ -326,6 +329,7 @@ body {
     font-weight: bold;
     font-family: Inter;
     font-size: 20px;
+    font-size: 1.3vw;
     display: flex;
     flex-direction: row;
     align-items: center;
