--- a/WebPC/SanPham/SanPhamStyles.css
+++ b/WebPC/SanPham/SanPhamStyles.css
@@ -24,6 +24,7 @@ body {
 
 #button > span, a {
     font-size: 18px;
+    font-size: 1.1vw;
     color: white;
     font-family: Inter;
     padding-right: 40px;
@@ -39,6 +40,7 @@ body {
 
 #button > #first {
     font-size: 18px;
+    font-size: 1.1vw;
     color: #00C2FF;
     font-family: Inter;
     font-weight: bold;
@@ -50,6 +52,7 @@ body {
 
 #button > #last {
     font-size: 18px;
+    font-size: 1.1vw;
     color: white;
     font-family: Inter;
     padding-right: 40px;
@@ -161,6 +164,7 @@ body {
     font-weight: bold;
     font-family: Inter;
     font-size: 20px;
+    font-size: 1.3vw;
     display: flex;
     flex-direction: row;
     align-items: center;
