--- a/WebPC/TrangChu/style.css
+++ b/WebPC/TrangChu/style.css
@@ -24,6 +24,7 @@ body {
 
 #button > span {
     font-size: 18px;
+    font-size: 1.1vw;
     color: white;
     font-family: Inter;
     padding-right: 40px;
@@ -34,6 +35,7 @@ body {
 
 #button > #first {
     font-size: 18px;
+    font-size: 1.1vw;
     color: #00C2FF;
     font-family: Inter;
     font-weight: bold;
@@ -45,6 +47,7 @@ body {
 
 #button > #last {
     font-size: 18px;
+    font-size: 1.1vw;
     color: white;
     font-family: Inter;
     padding-right: 40px;
@@ -87,6 +90,7 @@ body {
 
 .boxTitle {
     font-size: 40px;
+    font-size: 2.4vw;
     font-weight: bolder;
     font-family: Inter;
     margin-bottom: 40px;
@@ -94,6 +98,7 @@ body {
 
 .boxDescription {
     font-size: 25px;
+    font-size: 1.5vw;
     font-family: Inter;
 }
 
@@ -128,17 +133,19 @@ body {
 
 #footer {
     height: 300px;
-    width: 100%;
+    width: 98.7%;
     background-color: #00C2FF;
     color: white;
     font-weight: bold;
     font-family: Inter;
     font-size: 20px;
+    font-size: 1.3vw;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 150px;
+    gap: 90px;
+    padding-left: 15px;
 }
 
 #navigation {
