--- a/WebPhone/LienHe/PhoneStyle.css
+++ b/WebPhone/LienHe/PhoneStyle.css
@@ -75,6 +75,12 @@ input[type=text], select, textarea {
     margin-right: 10px;
     resize: vertical;
 }
+ul{
+    padding-inline-start:8vw;
+}
+li{
+    margin-top: 2vw;
+}
 /* @media (min-width: 600px) {
     #fname,#{}
 } */
