--- a/WebPhone/CongTrinhTieuBieu/PhoneCongTrinhTieuBieu.css
+++ b/WebPhone/CongTrinhTieuBieu/PhoneCongTrinhTieuBieu.css
@@ -1,230 +1,147 @@
 body {
-    /* margin: 0px;
+    margin: 0px;
     display: flex;
     flex-direction: column;
-    align-items: center; */
-    margin: 0px;
-    min-width:992px!important
-
+    align-items: center;
+    width: 100%;
 }
-.container{
-    min-width:992px!important
-}
-
-
 
 .header {
     display: block;
-    width: 100%;
+    height: 60px;
+    height: 15vw;
     object-fit: contain;
     margin: 0px;
 }
-.title{
-    font-size: 5vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    
+
+#menu {
+    width: 7%; 
+    position: absolute; 
+    left: 15%; 
+    top: 15%
 }
 
+#scrollpane {
+    display: block;
+    height: 120px;
+    height: 33vw;
+    margin-right: 20px;
+    object-fit: contain;
+    margin-top: 15vw;
+}
 
-
+.infoBox {
+    margin-top: 25px;
+    height: 210px;
+    height: 57vw;
+    width: 90%;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column; 
+    gap: 10px;
+    align-items: center;
+    padding-top: 10px;
+}
 
 #firstBox {
-    background: linear-gradient(to right, #FFCCCC 0%, #FFFF99 100%);
+    background: linear-gradient(#EB00FF 0%, #FEAAFF 50%, #FFBFED 100%);
 }
 
+#secondBox {
+    background: linear-gradient(#00FFD1 0%, #00FFC2 50%, #00C2FF 100%);
+}
+
+#thirdBox {
+    background: linear-gradient(#FF820E 0%, #FFDA00 55%, #DBFF00 100%)
+}
 
 #firstImage {
-    width: 400px;
+    display: block;
+    width: 40%;
     object-fit: contain;
 }
 
+#thirdImage {
+    display: block;
+    width: 35%;
+    object-fit: contain
+}
 
-.boxTitle {
-    font-size: 20px;
+.infoTitle {
+    font-size: 6vw; /* vw = view width */
     font-weight: bolder;
     font-family: Inter;
-    margin: 20px 0 40px; /* Shorter notation for margin */
-    text-align: center;
 }
 
-.boxDescription {
-    font-size: 18px;
+.infoDescription {
+    font-size: 11px;
+    font-size: 3vw;
     font-family: Inter;
-    padding: 0px;
+    line-height: 4vw;
 }
 
-.text-center{
-    text-align:center!important
+#secondBoxImage {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
 }
 
-#logo {
-    width: 80%;
+#firstCer, #secondCer {
+    width: 22vw;
     object-fit: contain;
 }
 
 #logoContainer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 40px;
-    border-top: black solid 1px;
+    margin-top: 20px;
+    border-top: 1px solid black;
+}
+
+#logo {
+    display: block;
+    width: 100%;
+    object-fit: contain;
 }
 
 #footer {
-    height: 300px;
-    width: 100%;
+    height: 35vw;
+    width: 98.7%;
     background-color: #00C2FF;
     color: white;
-    font-weight: bold;
     font-family: Inter;
-    font-size: 20px;
-    font-size: 1.3vw;
     display: flex;
     flex-direction: row;
-    align-items: center;
     justify-content: center;
-    gap: 150px;
+    gap: 90px;
+    padding-left: 2px;
+    padding-top: 15px;
+    margin: 0px;
 }
 
-#navigation {
-    margin-right: 300px;
-    margin-left: 30px;
+#footerTitle {
+    display: block;
+    font-weight: bold;
+    font-size: 2.8vw; 
 }
 
-li + li {
+#infoDisplay {
+    display: block;
+    font-size: 2.5vw;
+    padding-left: 15px;
     margin-top: 10px;
 }
 
-.col-3{
-    -ms-flex:0 0 25%;
-    flex:0 0 25%;
-    max-width:25%
-}
-.col-8{
-    -ms-flex:0 0 66.666667%;
-    flex:0 0 66.666667%;
-    max-width:66.666667%
+li + li {
+    margin-top: 5px;
 }
 
-.description {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+#chatbox {
+    position: fixed;
+    bottom: 3%;
+    right: 5%;
+    width: 15vw;
+    object-fit: contain;
 }
 
-.row{
-    display:-ms-flexbox;
-    display:flex;
-    -ms-flex-wrap:wrap;
-    flex-wrap:wrap;
-    margin-right:-15px;
-    margin-left:-15px
-}
-
-.justify-content-around{
-    -ms-flex-pack:distribute!important;
-    justify-content:space-around!important
-}
-.img-thumbnail{
-    
-    transition: 0.5s;
-    border-radius:20px;
-    max-width:80%;
-    height:auto;
-    
-}
-
-.col{
-    -ms-flex-preferred-size:0;
-    flex-basis:0;
-    -ms-flex-positive:1;
-    flex-grow:1;
-    max-width:100%
-}
-.list{
-    display: grid;
-    grid-template-columns: 300px 300px 300px;
-    column-gap: 20px;
-}
-.item {
-    height:200px;
-    transition: 0.5s;
-    padding:.15rem;
-    margin-bottom:5rem;
-    transition: 0.5s;
-    border-radius:20px;
-    max-width:80%;
-    height:auto;
-}
-
-.listPage{
-    padding:10px;
-    text-align: center;
-    list-style: none;
-    
-}
-.listPage li{
-    background-color: #ffffffBD;
-    padding:20px;
-    display: inline-block;
-    margin:0 10px;
-    cursor: pointer;
-    border: black;
-}
-.listPage .active{
-    background-color: #B192EF;
-    color:#fff;
-}
-
-#button {
-    width: 100%;
-    height: 55px;
-    background-color: #D70000;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-}
-
-#button > #first {
-    font-size: 18px;
-    font-size: 1.1vw;
-    font-family: Inter;
-    padding-right: 40px;
-    padding-left: 40px;
-    border-right: white solid 1px;
-    border-left: white solid 2px;
-}
-
-#button > #last {
-    font-size: 18px;
-    font-size: 1.1vw;
-    color: white;
-    font-family: Inter;
-    padding-right: 40px;
-    padding-left: 40px;
-    border-right: white solid 2px;
-    border-left: white solid 1px;
-}
-
-#button > span, a {
-    font-size: 18px;
-    font-size: 1.1vw;
-    color: white;
-    font-family: Inter;
-    padding-right: 40px;
-    padding-left: 40px;
-    border-right: white solid 1px;
-    border-left: white solid 1px;
-}
-
-#button > #congTrinhTieuBieu {
-    font-weight: bold;
-    color: #00C2FF;
-}
 #sideMenu {
     height: 100%;
     width: 0;
@@ -269,4 +186,76 @@ li + li {
 #selectedItem  {
     color: #CC0000;
     font-weight: bold;
+}
+
+/*Hương Trà*/
+.title{
+    font-size: 5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center !important;
+    display: flex;
+    flex-direction: column; 
+    gap: 10px;
+    align-items: center;
+    
+}
+
+.list {
+    display: grid;
+    grid-template-columns: 50vw 50vw ;
+    column-gap: 5vw;
+}
+
+.list > :nth-child(2n) {
+    height:200px;
+    transition: 0.5s;
+    padding: 0vw 5vw 0vw 0vw;
+    margin-bottom:5vw;
+    transition: 0.5s;
+    border-radius:20px;
+    max-width:100%;
+    height:auto;
+}
+
+.item {
+    height:200px;
+    transition: 0.5s;
+    padding: 0vw 0vw 0vw 5vw;
+    margin-bottom:5vw;
+    transition: 0.5s;
+    border-radius:20px;
+    max-width:100%;
+    height:auto;
+}
+
+
+
+.listPage{
+    padding:-5vw;
+    text-align: center;
+    list-style: none;
+    
+}
+.listPage li{
+    background-color: #ffffffBD;
+    padding:20px;
+    display: inline-block;
+    margin:0 10px;
+    cursor: pointer;
+    border: black;
+}
+.listPage .active{
+    background-color: #B192EF;
+    color:#fff;
+}
+
+.img-thumbnail{
+    
+    transition: 0.5s;
+    border-radius:20px;
+    max-width:100%;
+    height:auto;
+    
 }
