--- a/WebPC/SanPham/SanPhamStyles.css
+++ b/WebPC/SanPham/SanPhamStyles.css
@@ -79,18 +79,16 @@ body {
     width: 100%;
     border-radius: 20px;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
-    padding-left: 3.5rem;
+    /* padding-left: 3.5rem; */
     background: linear-gradient(to right, #FFCCCC 0%, #FFFF99 100%);
 }
-
 
 #firstImage {
     width: 400px;
     object-fit: contain;
 }
-
 
 .boxTitle {
     font-size: 28px;
@@ -124,7 +122,7 @@ body {
 
 }
 
-#cartButton {
+#searchButton {
     width: 300px;
     height: 40px;
     background-color: #D70000;
@@ -135,7 +133,7 @@ body {
     margin-bottom: 10px;
 }
 
-#cartButton i {
+#searchButton i {
     margin-right: 5px;
 }
 
@@ -267,7 +265,7 @@ li + li {
 }
 
 /* CSS để tùy chỉnh nút thêm vào giỏ hàng */
-.add-to-cart-button {
+.add-to-search-button {
     background-color: #4CAF50; /* Màu xanh lá */
     color: white; /* Màu chữ trắng */
     border: none;
@@ -283,6 +281,54 @@ li + li {
 }
 
 /* Hover effect */
-.add-to-cart-button:hover {
+.add-to-serch-button:hover {
     background-color: #45a049; /* Màu xanh lá nhạt */
+}
+#chatbox {
+    position: fixed;
+    right: 5%;
+    bottom: 5%;
+    z-index: 9999; /* Đảm bảo chatbox luôn ở lớp đầu tiên */
+
+}
+
+
+#trangChu:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#sanPham:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#chungNhan:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#huongDanSuDung:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#baoHanh:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#first:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#last:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#congTrinhTieuBieu:hover {
+    text-decoration: underline;
+    cursor: pointer;
 }
