Up sanPham_Phone

--- a/WebPC/SanPham/SanPhamStyles.css
+++ b/WebPC/SanPham/SanPhamStyles.css
@@ -75,7 +75,7 @@ body {
 #firstBox_1 {
     background: linear-gradient(to right, #FFCCCC 0%, #FFFF99 100%);
     margin-top: 50px;
-    height: 200px;
+    height: 250px;
     width: 100%;
     border-radius: 20px;
     display: flex;
@@ -94,10 +94,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-<<<<<<< HEAD
-=======
     /* padding-left: 3.5rem; */
->>>>>>> 42e2001e744d8fee988cbfe2ac974ea43ec64ccb
     background: linear-gradient(to right, #FFCCCC 0%, #FFFF99 100%);
 }
 
@@ -110,7 +107,7 @@ body {
     font-size: 28px;
     font-weight: bolder;
     font-family: Inter;
-    margin: 20px 0 40px; /* Shorter notation for margin */
+    margin: 20px 0 20px; /* Shorter notation for margin */
     text-align: center;
 }
 
@@ -209,8 +206,8 @@ li + li {
 .description {  
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-center;
+
 }
 
 .row{
