--- a/WebPC/BaoHanh/BaoHanhStyle.css
+++ b/WebPC/BaoHanh/BaoHanhStyle.css
@@ -185,8 +185,51 @@ th, td {
 
 #chatbox {
     position: fixed;
-    bottom: 3%;
     right: 5%;
-    width: 15vw;
-    object-fit: contain;
+    bottom: 5%;
+}
+
+#button > #baoHanh {
+    font-weight: bold;
+    color: #00C2FF;
+}
+
+/* Tra cứu */
+#navSanPham:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#navChungNhan:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#navHuongDanSuDung:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#navBaoHanh:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+#navCongTrinhTieuBieu:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#navLienHe:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#first:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#last:hover {
+    text-decoration: underline;
+    cursor: pointer;
 }
