--- a/WebPhone/ChungNhan/PhoneChungNhanStyles.css
+++ b/WebPhone/ChungNhan/PhoneChungNhanStyles.css
@@ -15,10 +15,7 @@ body {
 }
 
 #menu {
-    width: 7%; 
-    position: absolute; 
-    left: 15%; 
-    top: 15%
+    position: fixed;
 }
 
 #scrollpane {
@@ -27,7 +24,6 @@ body {
     height: 33vw;
     margin-right: 20px;
     object-fit: contain;
-    margin-top: 15vw;
 }
 
 #logoContainer {
@@ -42,7 +38,7 @@ body {
 }
 
 #footer {
-    height: 30vw;
+    height: 38vw;
     width: 98.7%;
     background-color: #00C2FF;
     color: white;
@@ -76,12 +72,12 @@ li + li {
 #chatbox {
     position: fixed;
     bottom: 3%;
-    right: 5%;
+    right: 8%;
     width: 15vw;
     object-fit: contain;
 }
 
-#sideMenu {
+/* #sideMenu {
     height: 100%;
     width: 0;
     position: fixed;
@@ -92,7 +88,7 @@ li + li {
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
-}
+} */
 
 .container {
     display: flex;
@@ -191,4 +187,49 @@ th, td {
     width: 100%;
     height: 100%;
     object-fit: contain;
+}
+
+.menu-btn {
+    font-size: 25px;
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    z-index: 1001;
+}
+
+.side-menu {
+    height: 100%;
+    width: 50vw;        
+    position: fixed;
+    top: 0;
+    left: -250px;        
+    background-color: firebrick;
+    padding-top: 60px;
+    transition: 0.3s;    
+    z-index: 1000;
+}
+
+.side-menu span {
+    padding: 10px 15px;
+    text-decoration: none;
+    font-size: 16px;
+    color: white;
+    display: block;
+    position: relative;
+}
+
+.side-menu span:hover {
+    color: firebrick;
+    background-color: #00C2FF;
+    font-weight: bold;
+}
+
+#chungNhan {
+    font-weight: bold;
+    color: #00C2FF;
+}
+
+#chungNhan:hover {
+    color: firebrick;
 }
