--- a/WebPC/TrangChu/style.css
+++ b/WebPC/TrangChu/style.css
@@ -134,7 +134,7 @@ body {
 #footer {
     height: 300px;
     width: 98.7%;
-    background-color: #00C2FF;
+    background-color: #0048ff;
     color: white;
     font-weight: bold;
     font-family: Inter;
