--- a/WebPhone/TrangChu/PhoneStyles.css
+++ b/WebPhone/TrangChu/PhoneStyles.css
@@ -3,7 +3,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    width: 100%;9
 }
 
 .header {
@@ -25,15 +25,13 @@ body {
     display: block;
     height: 120px;
     height: 33vw;
-    margin-right: 20px;
     object-fit: contain;
     margin-top: 15vw;
 }
 
 .infoBox {
     margin-top: 25px;
-    height: 210px;
-    height: 57vw;
+    height: 70vw;
     width: 90%;
     border-radius: 20px;
     display: flex;
@@ -44,7 +42,19 @@ body {
     padding-top: 10px;
 }
 
+#firstBox {
+    background: linear-gradient(#EB00FF 0%, #FEAAFF 50%, #FFBFED 100%);
+    height: 70vw;
+}
 
+#secondBox {
+    background: linear-gradient(#00FFD1 0%, #00FFC2 50%, #00C2FF 100%);
+    height: 68vw;
+}
+
+#thirdBox {
+    background: linear-gradient(#FF820E 0%, #FFDA00 55%, #DBFF00 100%)
+}
 
 #firstImage {
     display: block;
