--- a/WebPC/TrangChu/style.css
+++ b/WebPC/TrangChu/style.css
@@ -14,8 +14,8 @@ body {
 
 #button {
     width: 100%;
-    height: 55px;
-    background-color: #D70000;
+    height: 45px;
+    background-color: #00004d;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -127,25 +127,24 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 40px;
-    border-top: black solid 1px;
+    margin-top: 20px;   
 }
 
 #footer {
-    height: 300px;
+    height: 220px;
     width: 98.7%;
-    background-color: #0048ff;
-    color: white;
+    background-color: #ccccff;
     font-weight: bold;
     font-family: Inter;
-    font-size: 20px;
-    font-size: 1.3vw;
+    font-size: 1.1vw;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     gap: 90px;
     padding-left: 15px;
+    margin-top: 20px;
+    padding-top: 20px
 }
 
 #navigation {
