--- a/WebPC/BaoHanh/BaoHanhStyle.css
+++ b/WebPC/BaoHanh/BaoHanhStyle.css
@@ -15,7 +15,7 @@ body {
 #button {
     width: 100%;
     height: 55px;
-    background-color: #D70000;
+    background-color: #00004d;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -85,24 +85,34 @@ body {
 }
 
 #footer {
-    height: 300px;
-    width: 100%;
-    background-color: #00C2FF;
-    color: white;
+    height: 220px;
+    width: 98.7%;
+    background-color: #ccccff;
+    color: #000;
     font-weight: bold;
     font-family: Inter;
-    font-size: 20px;
     font-size: 1.1vw;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 150px;
+    gap: 90px;
+    padding-left: 15px;
+    margin-top: 20px;
+    padding-top: 20px
+}
+
+*, ::after, ::before {
+    box-sizing: unset;
 }
 
 #navigation {
     margin-right: 300px;
     margin-left: 30px;
+}
+
+li + li {
+    margin-top: 10px;
 }
 
 .container {
